<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/expense">
        <menu>
            <item
                android:id="@+id/nav_category"
                android:icon="@drawable/ic_services"
                android:title="@string/category" />
            <item
                android:id="@+id/nav_expense"
                android:icon="@drawable/ic_menu_special"
                android:title="@string/expense" />
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
